# university-research-project

./: .gitignore  README.md  _generate_docker_compose_web_servers.py  app.py  balancer.py  collector.py  config.py  docker-compose.yml  docker-compose_test-servers.yml  models.py  pyproject.toml  pytest.ini  replicator.py  requirements.txt  test_stats.json  weights.py
agent/: agent.py  config.py
algorithms/: __init__.py  airm.py  electre.py  lc.py  nsga2.py  saw.py  topsis.py  vikor.py
balancer_stats/: cpu_mem_resources.py  diagrams.ipynb  diagrams_with_latency.ipynb  res.txt  statistics.py
balancer_stats/assets/results_with_latency/: electre.json  saw.json
benchmark/: Dockerfile  _generate_docker_compose_web_servers.py  docker-compose_docker-servers.yml
evaluation/: cpu_mem_resources.py  diagrams_with_latency.ipynb  statistics.py  tes.json
evaluation/assets/results/: electre.json  saw.json  topsis.json
evaluation/assets/results_with_latency/: airm.json  topsis.json
evaluation/assets_old/results/: airm.json
proxy/: requirements.txt
src/: logging_config.py  main.py
src/adapters/inbound/http/: fastapi_proxy.py
src/adapters/outbound/metrics/: docker_metrics.py
src/application/ports/outbound/: http_client.py  metrics_provider.py
src/application/usecase/: choose_node.py  replicate_request.py
src/bootstrap/: container.py
src/domain/entities/: node_metrics.py
src/modules/types/: numpy.py
test_server/: Dockerfile  Readme.MD  requirements.txt
test_server/app/: main.py
tests/: test_balancer.py
tests/algorithms/: test_airm.py  test_topsis.py
(+52 files in other folders)
